...
    <string name="username_or_password_not_correct">Your username or password is not correct!</string>
    <string name="cannot_be_empty">This field can\'t be empty!</string>
    <string name="title_resource">Tons of riddles to boost up your brain power!</string>
    <string name="start_resource">Start</string>
    <string name="log_out_resource">Log out</string>
    <string name="log_out_question">Are you sure you want to log out?</string>
    <string name="yes_resource">yes</string>
    <string name="no_resource">no</string>
    <string name="account_resource">Account</string>
    <string name="initial_letter" translatable="false">A</string>
    <string name="delete_resource">Delete</string>
    <string name="password_demands">Password must have at least 8 characters, one letter and one number!</string>
    <string name="registration_success">You successfully registered!</string>
...
    <string name="best_players">Best players</string>
    <string name="settings_resource">Settings</string>
    <string name="enable_notifications_resource">Enable or disable notifications</string>
    <string name="notification_text">Play our game and have some fun.</string>
    <string name="notification_title">We miss you!</string>
    <string name="choose_sound">Choose notification sound</string>
    <string name="wrong_answer_resource">Wrong answer</string>
    <string name="try_again_resource">Try again</string>
    <string name="false_picture_resource">false_picture</string>
    <string name="true_slika_resource">true_slika</string>
    <string name="continue_resource">Continue</string>
    <string name="correct_resource">Correct</string>
    <string name="end_game">End game</string>
...
    <string name="error_msg">You can\'t see score due to internet connection problems.</string>
    <string name="joker_resource">Joker</string>
    <string name="joker_used_resource">You don\'t have joker help available!</string>
    <string name="joker_question">You have one joker help available. It will give you a solution for this riddle and it will cost you 50 points.</string>
    <string name="dont_have_enough_points">You must have at least 50 points for joker help!</string>
    <string name="more_resource">More</string>
    <string name="reset_your_stats">Reset your stats</string>
    <string name="reset_question_resource">Are you sure you want to reset all the progress you made?</string>
    <string name="choose_design_for_toast_resource">Choose design for toast messages</string>
    <string name="subscribe_to_email_list">Subscribe to our email list</string>
    <string name="seekbar_number_of_subscribers">%1$s are already subscribed to our mailing list!</string>
    <string name="image_description">image_description</string>
    <string-array name="sounds">
...
