<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina"
    android:keepScreenOn="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.11" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.41" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.59" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.87" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.84" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score_text_resource"
        android:textColor="@color/login_form_details_medium"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bgquestion"
            android:gravity="center"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/textQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#332FA2"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/solutionEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bgpurple"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#332FA2"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <LinearLayout
            android:id="@+id/layoutParent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutParent1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6">

            <TextView
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style" />

            <TextView
                android:id="@+id/ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                style="@style/letter_style"
                />

        </LinearLayout>


        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bgpurple"
            android:text="@string/delete_resource"
            android:textColor="@color/riddle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bgpurple"
            android:text="@string/confirm_resource"
            android:textColor="@color/riddle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            style="@style/guideline_style.vertical"
            app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
